# 01-rcli

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  cliff.toml
fixtures/: b64.txt
src/: lib.rs  main.rs  opts.rs  process.rs
src/cli/: base64.rs  csv.rs  genpass.rs  mod.rs
src/process/: b64.rs  csv_convert.rs  gen_pass.rs
