[package]
name = "rcli"
version = "0.1.0"
authors = ["Yuming Sang <aisngyuming@gmail.com>"]
edition = "2021"
license = ""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.40", features = ["derive"] }
csv = "1.3.1"
rand = "0.9.1"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.33"
zxcvbn = "3.1.0"
